fixed welcome message on mobile

--- a/themes/isa/scss/layout/_home.scss
+++ b/themes/isa/scss/layout/_home.scss
@@ -49,7 +49,7 @@
 	font-weight: 600;
 	line-height: 1.35;
 	padding: 1px;
-	color: #fff; 
+	
 	@media screen and (min-width: $break-small) {
 		background: #000;
 		background: rgba(0,0,0,.8);
